// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Count Up block edit matches snapshots 1`] = `
<Fragment>
  <div
    className="ugb-countup"
  >
    <RichText
      onChange={[Function]}
      style={
        Object {
          "color": "#444444",
        }
      }
      tagName="h4"
      value="Happy Customers"
    />
    <RichText
      className="ugb-counter"
      data-delay="16"
      data-duration="1000"
      onChange={[Function]}
      placeholder={undefined}
      style={
        Object {
          "color": "#444444",
          "fontSize": "60px",
        }
      }
      tagName="div"
      value="12,345"
    />
    <RichText
      className="ugb-counter-des"
      onChange={[Function]}
      style={
        Object {
          "color": "#444444",
        }
      }
      tagName="p"
      value="and counting"
    />
  </div>
  <InspectorControls>
    <PanelColorSettings
      colorSettings={
        Array [
          Object {
            "label": "Heading Color",
            "onChange": [Function],
            "value": "#444444",
          },
          Object {
            "label": "Number Color",
            "onChange": [Function],
            "value": "#444444",
          },
          Object {
            "label": "Description Color",
            "onChange": [Function],
            "value": "#444444",
          },
        ]
      }
      title="Color Settings"
    />
    <PanelBody>
      <RangeControl
        label="Counter Text Font Size"
        max="100"
        min="10"
        onChange={[Function]}
        value="60"
      />
    </PanelBody>
  </InspectorControls>
</Fragment>
`;

exports[`Count Up block save matches snapshots 1`] = `
<div
  className="ugb-countup"
>
  <Unknown
    style={
      Object {
        "color": "#444444",
      }
    }
    tagName="h4"
    value="Happy Customers"
  />
  <Unknown
    className="ugb-counter"
    data-delay="16"
    data-duration="1000"
    style={
      Object {
        "color": "#444444",
        "fontSize": "60px",
      }
    }
    tagName="div"
    value="12,345"
  />
  <Unknown
    style={
      Object {
        "color": "#444444",
      }
    }
    tagName="p"
    value="and counting"
  />
</div>
`;
